# ExpertDatebase

./: .bandit  .dockerignore  .env.example  .gitignore  .temp-script.js  .temp-template.vue  README.md  pyproject.toml  syntax_error.txt
.codex/: config.toml
.github/workflows/: ci.yml
datasets/v1.0/: manifest.json  retrieval_eval.jsonl  retrieval_eval_gb_pair_10.jsonl
datasets/v1.1/: manifest.json  retrieval_eval_six_specs_bid_30.jsonl
datasets/v1.2/: manifest.json  retrieval_eval_eight_specs_bid_32.jsonl
docker/: daemon.recommended.json  docker-compose.prod.yml  docker-compose.yml
docs/: codex_rag_extensions_spec_table_noise_v1.md
docs/plans/: 2026-02-28-expertdatebase-mvp-qdrant-hybrid.md  2026-02-28-分批实施计划-上线阻塞优先.md  2026-03-01-rag-phased-rollout-plan.md  2026-03-06-rag-ontology-routing-expansion-plan.md
docs/progress/: 2026-03-06-rag-progress.md
docs/reports/: 2026-02-28-上线差距审计报告.md  2026-03-01-bandit-scan-results.md  2026-03-01-gate-signoff.md  2026-03-01-mvp-acceptance-checklist.md  2026-03-01-全项目技术审查与修订计划.md  2026-03-06-rag-optimization-delivery-note.md  2026-03-06-rag-smoke-validation-record.md
docs/runbooks/: gate_signoff.md  mvp_acceptance.md  ops_checklist.md  release_runbook.md  retrieval_eval.md
scripts/: docker_hub_healthcheck.sh
services/api-server/: Dockerfile  alembic.ini
services/scheduler/: Dockerfile
services/sirchmunk/: server.py
services/worker/: Dockerfile
shared/: logging_config.py
shared/configs/: README.md  explanation_rules.yaml  ie_schema_v1.json  keyword_rules_v1.yaml  loader.py  noise_rules.yaml  (+4 more)
(+179 files in other folders)
