[project]
name = "expertdatebase"
version = "0.1.0"
description = "ExpertDatebase monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "sqlalchemy",
  "pydantic",
  "pyyaml",
  "alembic",
  "requests",
  "redis",
  "minio",
  "psycopg2-binary",
  "python-multipart",
]

[tool.unittest]
start-directory = "tests"
pattern = "test_*.py"
