[project]
name = "expertdatebase"
version = "0.1.0"
description = "ExpertDatebase monorepo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "pydantic",
  "pyyaml",
  "alembic",
  "requests",
  "pypdf",
  "pymupdf",
  "redis",
  "minio",
  "psycopg2-binary",
  "python-multipart",
  "slowapi",
  "structlog",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
